# CoCA_original

./: .gitignore  README.md  coca_analysis.md  pyproject.toml
scripts/: __init__.py  eval_coca.py  train_coca.py
src/coca/: __init__.py  config.py  data.py  metrics.py  model_utils.py  prompts.py  rewards.py  trainer.py
src/coca_confidence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_data.py  test_metrics.py  test_prompts.py  test_rewards.py
