[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coca-confidence"
version = "0.1.0"
description = "Runnable MVP of CoCA: confidence-first segmented GRPO for math RL."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "accelerate>=0.34",
  "bitsandbytes>=0.43; platform_system == 'Linux'",
  "datasets>=2.20",
  "math-verify>=0.5",
  "numpy>=1.26",
  "peft>=0.12",
  "scikit-learn>=1.4",
  "torch>=2.4",
  "tqdm>=4.66",
  "transformers>=4.45",
  "trl>=0.11"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
